[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["Odeh <abuzaid163@hotmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
numpy = "^1.21.3"
matplotlib = "^3.4.3"
jupyterlab="^3.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
